questions now resize pretty well. Could still maybe use some work in the future. Not perfectly centered

--- a/ChachaT/Base.lproj/Main.storyboard
+++ b/ChachaT/Base.lproj/Main.storyboard
@@ -286,7 +286,7 @@
                                                     <action selector="questionButtonOnePressed:" destination="7Sy-Jm-ZWb" eventType="touchUpInside" id="2S3-mP-ocr"/>
                                                 </connections>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="18q-bc-79v">
+                                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="18q-bc-79v" customClass="ResizableButton" customModule="ChachaT" customModuleProvider="target">
                                                 <rect key="frame" x="20" y="493" width="560" height="60"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="330" id="GgM-VQ-xLE"/>
@@ -301,10 +301,10 @@
                                                     </mask>
                                                 </variation>
                                                 <connections>
-                                                    <action selector="questionButtonTwoPressed:" destination="7Sy-Jm-ZWb" eventType="touchUpInside" id="qAG-77-ZDA"/>
+                                                    <action selector="questionButtonTwoPressed:" destination="7Sy-Jm-ZWb" eventType="touchUpInside" id="MkN-hO-exi"/>
                                                 </connections>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hdx-yn-KHS">
+                                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hdx-yn-KHS" customClass="ResizableButton" customModule="ChachaT" customModuleProvider="target">
                                                 <rect key="frame" x="20" y="560" width="560" height="60"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="330" id="eXZ-98-ah3"/>
@@ -319,7 +319,7 @@
                                                     </mask>
                                                 </variation>
                                                 <connections>
-                                                    <action selector="questionButtonThreePressed:" destination="7Sy-Jm-ZWb" eventType="touchUpInside" id="9uM-6O-w9l"/>
+                                                    <action selector="questionButtonThreePressed:" destination="7Sy-Jm-ZWb" eventType="touchUpInside" id="Mt0-dr-bGv"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wKk-OW-7Uu">
@@ -464,8 +464,8 @@
                         <outlet property="theFullNameTextField" destination="Cak-7g-UB7" id="RyF-75-ElM"/>
                         <outlet property="theProfileImageButtonOverlay" destination="g5O-C2-7n0" id="K7c-5M-A8C"/>
                         <outlet property="theQuestionButtonOne" destination="XWC-yS-1iT" id="DzD-NB-Zhs"/>
-                        <outlet property="theQuestionButtonThree" destination="Hdx-yn-KHS" id="ZLc-nf-WrZ"/>
-                        <outlet property="theQuestionButtonTwo" destination="18q-bc-79v" id="lgk-YV-gib"/>
+                        <outlet property="theQuestionButtonThree" destination="Hdx-yn-KHS" id="05G-SN-oAX"/>
+                        <outlet property="theQuestionButtonTwo" destination="18q-bc-79v" id="3Ly-Cl-wS5"/>
                         <outlet property="theSavingSpinner" destination="zLF-DG-mmb" id="DeZ-s9-0nd"/>
                         <outlet property="theSecondBulletText" destination="MLZ-wk-Al1" id="CvR-zm-bkU"/>
                         <outlet property="theThirdBulletText" destination="QhN-sR-LNs" id="GAd-Lq-IIG"/>
