--- a/ChachaT/Base.lproj/PopUp.storyboard
+++ b/ChachaT/Base.lproj/PopUp.storyboard
@@ -5,6 +5,79 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
+        <!--Bottom Picture Pop Up View Controller-->
+        <scene sceneID="z8Y-OC-yVY">
+            <objects>
+                <viewController storyboardIdentifier="BottomPicturePopUpViewController" id="Qen-f5-BQ5" customClass="BottomPicturePopUpViewController" customModule="ChachaT" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="rLc-co-tMD"/>
+                        <viewControllerLayoutGuide type="bottom" id="rdI-KA-omB"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="OuQ-0V-dsi">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jiF-Zf-LoP">
+                                <rect key="frame" x="20" y="30" width="335" height="45"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="C54-Re-SkH"/>
+                                    <constraint firstAttribute="height" constant="45" id="JDk-XM-RLI"/>
+                                    <constraint firstAttribute="width" constant="330" id="bC8-w9-7Zq"/>
+                                </constraints>
+                                <state key="normal" title="Photo Library" backgroundImage="Question Bubble">
+                                    <color key="titleColor" red="0.047058823530000002" green="0.72941176470000002" blue="0.58823529409999997" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="C54-Re-SkH"/>
+                                        <exclude reference="bC8-w9-7Zq"/>
+                                    </mask>
+                                </variation>
+                                <connections>
+                                    <action selector="thePhotoLibraryButtonPressed:" destination="Qen-f5-BQ5" eventType="touchUpInside" id="vhk-Wx-VGw"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Hg-H3-BQ2">
+                                <rect key="frame" x="20" y="89" width="335" height="45"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="W4o-Tf-GWP"/>
+                                    <constraint firstAttribute="height" constant="60" id="iOm-t7-k29"/>
+                                    <constraint firstAttribute="width" constant="330" id="tyY-iN-bI6"/>
+                                </constraints>
+                                <state key="normal" title="Camera" backgroundImage="Question Bubble">
+                                    <color key="titleColor" red="0.047058823530000002" green="0.72941176470000002" blue="0.58823529409999997" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="iOm-t7-k29"/>
+                                        <exclude reference="tyY-iN-bI6"/>
+                                    </mask>
+                                </variation>
+                                <connections>
+                                    <action selector="theCameraButtonPressed:" destination="Qen-f5-BQ5" eventType="touchUpInside" id="IJm-fa-IHg"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.69803921570000005" green="0.69803921570000005" blue="0.69803921570000005" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="jiF-Zf-LoP" firstAttribute="leading" secondItem="OuQ-0V-dsi" secondAttribute="leading" constant="20" id="3gH-tH-UIB"/>
+                            <constraint firstItem="0Hg-H3-BQ2" firstAttribute="top" secondItem="jiF-Zf-LoP" secondAttribute="bottom" constant="14" id="80j-jQ-HLe"/>
+                            <constraint firstAttribute="trailing" secondItem="jiF-Zf-LoP" secondAttribute="trailing" constant="20" id="8vl-Fo-4BC"/>
+                            <constraint firstItem="0Hg-H3-BQ2" firstAttribute="trailing" secondItem="jiF-Zf-LoP" secondAttribute="trailing" id="qFx-4h-nJt"/>
+                            <constraint firstItem="jiF-Zf-LoP" firstAttribute="top" secondItem="rLc-co-tMD" secondAttribute="bottom" constant="10" id="qXh-TS-tDw"/>
+                            <constraint firstItem="0Hg-H3-BQ2" firstAttribute="leading" secondItem="jiF-Zf-LoP" secondAttribute="leading" id="slD-Jn-CLS"/>
+                        </constraints>
+                    </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="theCameraButton" destination="0Hg-H3-BQ2" id="l2c-UI-GQW"/>
+                        <outlet property="thePhotoLibraryButton" destination="jiF-Zf-LoP" id="PwA-0B-ROw"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yTV-rN-gaF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="985.5" y="901.5"/>
+        </scene>
         <!--User Detail Pop Up View Controller-->
         <scene sceneID="hCa-Hs-NW7">
             <objects>
@@ -265,5 +338,6 @@
     </scenes>
     <resources>
         <image name="Custom Question Bubble" width="340" height="68"/>
+        <image name="Question Bubble" width="340" height="68"/>
     </resources>
 </document>
